womtool/src/test/resources/validate/wdl/wdl_draft3/invalid/extra_input/extra_input.wdl
version 1.0

workflow extra_input {
  input {
    Int x
  }
}
